// Copyright 2024 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

edition = "2023";

package optimization_guide.proto;

import "components/optimization_guide/proto/features/common_quality_data.proto";

option optimize_for = LITE_RUNTIME;
option java_package = "org.chromium.components.optimization_guide.features.proto";

option java_outer_classname = "PrivacyPolicyInsightsProto";

// DO NOT EDIT THIS FILE DIRECTLY!
//
// This file is generated in g3 and then synced to Chrome. Instead, please refer to
// http://go/chrome-mqls-onboarding (Google-internal link), and then changes will
// be synced with Chrome automatically.

message PrivacyPolicyInsightsLoggingData {
  PrivacyPolicyInsightsRequest request = 1 [features = { field_presence: EXPLICIT }];

  PrivacyPolicyInsightsResponse response = 2 [features = { field_presence: EXPLICIT }];

  PrivacyPolicyInsightsQuality quality = 3 [features = { field_presence: EXPLICIT }];
}

message PrivacyPolicyInsightsRequest {
  // The canonical URL of the privacy policy page.
  string canonical_url = 1 [features = { field_presence: EXPLICIT }];

  // The inner text of the privacy policy page.
  string page_inner_text = 2 [features = { field_presence: EXPLICIT }];

  // The question the model should answer about the privacy policy text.
  string question = 3 [features = { field_presence: EXPLICIT }];
}

message PrivacyPolicyInsightsResponse {
  // The answer the model provided to the question.
  string answer_summary = 1 [features = { field_presence: EXPLICIT }];

  // The original text excerpt that the answer_summary was derived from.
  string original_text_excerpt = 2 [features = { field_presence: EXPLICIT }];
}

message PrivacyPolicyInsightsQuality {
  UserFeedback user_feedback = 1 [features = { field_presence: EXPLICIT }];
}
